Убрана часть бизнес-логики из UserController