@@ -18,8 +18,6 @@ import ru.cft.template.entity.User;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -32,129 +30,59 @@ public class UserController {
 
     @GetMapping("/{id}")
     public ResponseEntity<Optional<User>> getInfo(@PathVariable Long id) {
-        try {
-            Optional<User> user = userService.getUserById(id);
-
-            if (user.isEmpty()) {
-                log.error("User not found");
-                return ResponseEntity.notFound().build();
-            }
-
-            return ResponseEntity.ok(user);
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
-        }
+        Optional<User> user = userService.getUserById(id);
+        return ResponseEntity.ok(user);
     }
 
     @PostMapping("")
     public ResponseEntity<String> create(@RequestBody User user, BindingResult bindingResult) {
-        try {
-            if (bindingResult.hasErrors()) {
-                return ResponseEntity.badRequest().body("Registration failed");
-            }
-            userService.save(user);
-            return ResponseEntity.ok().build();
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
+        if (bindingResult.hasErrors()) {
+            return ResponseEntity.badRequest().body("Registration failed");
         }
+        userService.save(user);
+        return ResponseEntity.ok().build();
     }
 
     @PatchMapping("/{id}")
     public ResponseEntity<String> update(@PathVariable Long id, @RequestBody User user) {
-        try {
-            userService.update(id, user);
-            return ResponseEntity.ok().build();
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
-        }
+        userService.update(id, user);
+        return ResponseEntity.ok().build();
     }
 
     @GetMapping("/{id}/sessions")
     public ResponseEntity<List<SessionResponse>> getSessions(@PathVariable Long id) {
-        try {
-            User user = userService.getUserByIdWithSessions(id);
-            if (user == null) {
-                log.error("User not found");
-                return ResponseEntity.notFound().build();
-            }
+        User user = userService.getUserByIdWithSessions(id);
 
-            return ResponseEntity.ok(new ArrayList<>(user.getSessions().stream().
-                    map(session -> new SessionResponse(user.getId(), session))
-                    .collect(Collectors.toList())));
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
-        }
+        return ResponseEntity.ok(new ArrayList<>(user.getSessions().stream().
+                map(session -> new SessionResponse(user.getId(), session))
+                .toList()));
     }
 
     @GetMapping("/{id}/sessions/current")
     public ResponseEntity<SessionResponse> getCurrent(@RequestHeader(value = HttpHeaders.AUTHORIZATION) String authTokenHeader, @PathVariable Long id) {
-        try {
-            if (!authTokenHeader.startsWith("Bearer ")) {
-                log.error("No token input");
-                return ResponseEntity.badRequest().build();
-            }
-            String authToken = authTokenHeader.substring("Bearer ".length());
-
-            Optional<User> user = userService.getUserById(id);
-            if (user.isEmpty()) {
-                log.error("User not found");
-                return ResponseEntity.notFound().build();
-            }
-
-            Session currentSession = user.get().getTokens().stream()
-                    .filter(session -> session.getId().equals(UUID.fromString(authToken)))
-                    .findFirst()
-                    .get().getSession();
-
-            return ResponseEntity.ok(new SessionResponse(currentSession));
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
-        }
+        return ResponseEntity.ok(new SessionResponse(sessionService.getByUser(userService.getUserById(id), authTokenHeader)));
     }
 
     @PostMapping("/sessions")
-    public ResponseEntity<Session> newSession(@RequestBody LoginRequest request) {
-        try {
-            User user = userService.getUserByPhone(request.getPhone());
-            if (user == null) {
-                return ResponseEntity.status(404).build();
-            }
-            Session session = sessionService.create(user);
-            Token token = tokenService.create(session);
+    public ResponseEntity<SessionResponse> newSession(@RequestBody LoginRequest request) {
+        User user = userService.getUserByPhone(request.getPhone());
+        Session session = sessionService.create(user);
+        Token token = tokenService.create(session);
 
-            user.getSessions().add(session);
-            user.getTokens().add(token);
+        userService.saveSessionAndToken(user, session, token);
 
-            return ResponseEntity.ok(session);
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
-        }
+        return ResponseEntity.ok(new SessionResponse(session));
     }
 
     @DeleteMapping("/sessions/{id}")
     public ResponseEntity<String> deleteSession(@PathVariable Long id) {
-        try {
-            tokenService.delete(id);
-            Optional<Session> session = sessionService.getById(id);
-            if (session.isEmpty()) {
-                log.error("Session not found");
-                return ResponseEntity.status(404).build();
-            }
+        tokenService.delete(id);
+        Optional<Session> session = sessionService.getById(id);
 
-            sessionService.delete(id);
-            User user = session.get().getUser();
-            user.getSessions().remove(session);
+        sessionService.delete(id);
+        userService.deleteSession(session.get().getUser(), session);
 
-            return ResponseEntity.ok().build();
-        } catch (Exception exception) {
-            log.error(exception.getLocalizedMessage());
-            return ResponseEntity.status(500).build();
-        }
+        return ResponseEntity.ok().build();
+
     }
 }
